tests/whiley/valid/test_1923.wyal
define count_requires_0(int n) is:
    n >= 0


define count_ensures_0(int n, int r) is:
    (r == n) || (r == 2)


define count_loopinvariant_20(int n, int i) is:
    (i >= 0) && (i <= n)


assert "postcondition not satisfied":
    forall(int i, int i$4, int i$1, int i$3, int n):
        if:
            count_requires_0(n)
            i == 0
            either:
                count_loopinvariant_20(n, i$1)
                i$1 < n
                i$1 == 2
                i$4 == i$1
            or:
                count_loopinvariant_20(n, i$3)
                i$3 >= n
                i$4 == i$3
        then:
            count_ensures_0(n, i$4)


