tests/whiley/invalid/test_83.wyal
define count_requires_0(int n) is:
    n >= 0


define count_loopinvariant_34(int n, int i) is:
    (i >= 0) && (i <= n)


assert "loop invariant not restored":
    forall(int i$7, int i$5, int i$6, int n, int i$4, int i):
        if:
            count_requires_0(n)
            i == 0
            count_loopinvariant_34(n, i$4)
            i$4 < n
            either:
                i$4 == 3
                i$5 == (i$4 + 2)
                i$7 == i$5
            or:
                i$4 != 3
                i$6 == (i$4 + 1)
                i$7 == i$6
        then:
            count_loopinvariant_34(n, i$7)


